// Dappa AI — Database Schema
// Import into https://dbdiagram.io via Import > Import from DBML

Project dappa_ai {
  database_type: 'PostgreSQL'
  Note: 'Autonomous caregiver shift-filling platform'
}

// ─── Enums ───────────────────────────────────────────────────

Enum user_status {
  active
  suspended
  soft_deleted
}

Enum project_status {
  active
  draft
  completed
  archived
}

Enum meeting_status {
  scheduled
  confirmed
  completed
  cancelled
}

Enum device_type {
  desktop
  mobile
  tablet
}

Enum chat_role {
  user
  assistant
}

Enum roster_task_status {
  detected
  gathering
  scoring
  reasoning
  contacting
  cascading
  accepted
  assigned
  escalated
  completed
  cancelled
}

Enum roster_urgency {
  planned
  urgent
}

Enum cascade_strategy {
  sequential
  parallel
}

Enum workflow_event_status {
  received
  completed
  failed
}

Enum event_type {
  "visit.created"
  "visit.updated"
  "visit.vacated"
  "visit.cancelled"
  "employee.created"
  "employee.status_changed"
  "employee.unavailability.created"
  "client.created"
  "service.created"
}

// ─── Core Tables ─────────────────────────────────────────────

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  supabase_id text [not null, unique, note: 'Supabase Auth UUID — used only for auth mapping']
  email text [not null, unique]
  name text
  status user_status [not null, default: 'active']
  status_reason text
  status_changed_at timestamptz
  deleted_at timestamptz
  purge_after timestamptz
  last_login_at timestamptz
  login_count integer [not null, default: 0]
  avatar_url text
  timezone text [not null, default: 'UTC']
  locale text [not null, default: 'en']
  metadata jsonb
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note: 'Internal user record. Two-ID system: users.id (principalId) is used for all FKs and RLS; supabase_id is only for auth provider mapping.'
}

Table projects {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  name text [not null]
  description text
  status project_status [not null, default: 'active']
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note: 'Legacy — from starter template'
}

Table meetings {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  title text [not null]
  description text
  location text
  start_time timestamptz [not null]
  end_time timestamptz [not null]
  attendees jsonb [not null, default: '[]', note: 'string[] of attendee names']
  status meeting_status [not null, default: 'scheduled']
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note: 'Legacy — from starter template'
}

// ─── Chat Tables ─────────────────────────────────────────────

Table chat_conversations {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  title text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note: 'Chat session. Used for conversational rostering interface.'
}

Table chat_messages {
  id uuid [pk, default: `gen_random_uuid()`]
  conversation_id uuid [not null, ref: > chat_conversations.id]
  user_id uuid [not null, ref: > users.id]
  role chat_role [not null, note: 'user or assistant']
  content text [not null]
  created_at timestamptz [default: `now()`]

  Note: 'ON DELETE CASCADE via conversation_id'
}

// ─── User Management Tables ─────────────────────────────────

Table user_status_history {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  from_status text [not null]
  to_status text [not null]
  reason text
  changed_by uuid [ref: > users.id, note: 'User who initiated the change']
  ip_address text
  created_at timestamptz [default: `now()`]

  Note: 'Immutable audit trail for user status transitions'
}

Table user_devices {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  device_fingerprint text [not null]
  device_name text
  device_type device_type
  os text
  browser text
  trusted integer [not null, default: 0, note: 'Boolean as integer — driver compat']
  last_ip text
  last_active_at timestamptz
  created_at timestamptz [default: `now()`]

  indexes {
    (user_id, device_fingerprint) [unique, name: 'uq_user_device_fingerprint']
  }

  Note: 'ON DELETE CASCADE via user_id. Client-side fingerprinting.'
}

Table user_sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  device_id uuid [ref: > user_devices.id, note: 'ON DELETE SET NULL']
  status text [not null, default: 'active']
  ip_address text
  user_agent text
  started_at timestamptz [default: `now()`]
  last_active_at timestamptz [default: `now()`]
  expires_at timestamptz [not null, note: '30-day TTL']
  ended_at timestamptz
  ended_reason text [note: 'user_logout | revoked | expired']
  created_at timestamptz [default: `now()`]

  Note: 'ON DELETE CASCADE via user_id. Heartbeat every 15 min. sessionId persisted in localStorage.'
}

// ─── System Tables (No RLS) ─────────────────────────────────

Table workflow_events {
  id uuid [pk, default: `gen_random_uuid()`]
  event_id text [not null, unique, note: 'AlayaCare event UUID — idempotency key']
  event_type event_type [not null]
  source text [not null, note: 'simulation | lambda']
  payload jsonb [not null]
  status workflow_event_status [not null, default: 'received']
  trace_id text
  result jsonb
  error text
  processed_at timestamptz
  created_at timestamptz [default: `now()`]

  Note: 'No RLS — system data, no user_id. Webhook event processing audit trail. Two-layer idempotency: SELECT check + unique constraint catch.'
}

// ─── Rostering Tables ────────────────────────────────────────

Table roster_tasks {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  visit_id integer [not null, note: 'AlayaCare visit ID']
  client_id integer [note: 'AlayaCare client ID']
  status roster_task_status [not null, default: 'detected']
  urgency roster_urgency [not null, default: 'planned']
  version integer [not null, default: 1, note: 'Optimistic locking — incremented on each update']

  // Scoring & reasoning snapshots
  match_result jsonb [note: 'Full MatchResult snapshot from scoring engine']
  llm_recommendation jsonb [note: 'Full LLMRecommendation from reasoning layer']

  // Contact tracking
  contacts jsonb [not null, default: '[]', note: 'ContactAttempt[] — ordered outreach attempts']
  current_contact_index integer [not null, default: 0]
  cascade_strategy cascade_strategy [not null, default: 'sequential']

  // Outcome
  assigned_employee_id integer [note: 'AlayaCare employee ID of assigned caregiver']
  escalated_to uuid [ref: > users.id, note: 'User who took over escalated task']
  escalation_reason text

  // Provenance
  source_event_id text [note: 'Links to workflow_events.event_id if webhook-triggered']

  // Timing
  detected_at timestamptz [not null, default: `now()`]
  scoring_completed_at timestamptz
  first_contact_at timestamptz
  resolved_at timestamptz [note: 'When assigned or escalated']
  time_to_fill_ms integer

  created_by text [not null, default: 'system', note: 'system | manual']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Workflow state for autonomous shift-filling. RLS: user_id = auth.uid(). State machine: detected → gathering → scoring → reasoning → contacting → cascading → accepted → assigned → escalated → completed → cancelled'
}

Table roster_audit_log {
  id uuid [pk, default: `gen_random_uuid()`]
  task_id uuid [not null, ref: > roster_tasks.id]
  user_id uuid [not null, ref: > users.id]
  timestamp timestamptz [not null, default: `now()`]
  action text [not null, note: 'e.g. scoring_completed, sms_sent, offer_declined, task_created']
  actor text [not null, note: 'system | llm | chat | user UUID']
  details jsonb [not null, default: '{}', note: 'Action-specific data']
  reasoning text [note: 'LLM reasoning if applicable']

  Note: 'Append-only audit log. ON DELETE CASCADE via task_id. RLS: user_id = auth.uid(). Every state transition and chat write action is logged.'
}

Table roster_daily_metrics {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  date date [not null]
  tasks_created integer [not null, default: 0]
  tasks_filled_autonomous integer [not null, default: 0]
  tasks_escalated integer [not null, default: 0]
  avg_time_to_fill_ms integer
  first_contact_acceptance_rate numeric(5,2) [note: 'Percentage 0.00–100.00']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, date) [unique, name: 'uq_roster_metrics_user_date']
  }

  Note: 'Materialised daily metrics for analytics dashboard. RLS: user_id = auth.uid().'
}

// ─── Table Groups ────────────────────────────────────────────

TableGroup user_management {
  users
  user_devices
  user_sessions
  user_status_history
}

TableGroup chat {
  chat_conversations
  chat_messages
}

TableGroup rostering {
  roster_tasks
  roster_audit_log
  roster_daily_metrics
}

TableGroup system {
  workflow_events
}

TableGroup legacy {
  projects
  meetings
}
